final tweaks before demo

--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -4,12 +4,17 @@ body {
   // background-size: 169.71px 169.71px;
   margin: auto;
   text-align: center;
+  font-family: helvetica;
 }
 
 h1 {
   font-family: helvetica;
   font-size: 40px;
   color: black;
+}
+
+#signin {
+  color: white;
 }
 
 div {
